Putting in lim's fix for the stats line.
Note that without the div class="clear" it wouldn't work (the bottom edge of the container would overlap), so I went ahead with that solution.

--- a/public/stylesheets/site-chrome.css
+++ b/public/stylesheets/site-chrome.css
@@ -137,12 +137,13 @@ NAVIGATION, ACTIONS (BUTTONS)*/
  p.icon, div.icon      { height: 100px; width: 100px; overflow: hidden; position:absolute; left: 0.25em;}
 
 /* META*/
- #main dl.meta         { background: #fffef9; border: 2px solid; clear: right; margin: 0 auto; padding: 0.5em; position: relative }
- .meta dt, .meta dt.warning  { font-size: 0.875em; font-weight: 100; width: 10.5em }
- #main .meta dd        { margin: -1.3em 0 .7em 13em;  }
- #main .meta .stats dl dd  { margin: 0 0.5em 0 }
- .meta dd ul li       { display: inline; margin: auto;}
- .meta dd blockquote    { margin: -1em 0 0 0 !important;}
+ #main dl.meta 				{ background: #fffef9; border: 2px solid; clear: right; margin: 0 auto; padding: 0.5em; position: relative }
+ .meta dt, .meta dt.warning	{ font-size: 0.875em; font-weight: 100; width: 10.5em }
+ #main .meta dd				{ margin: -1.3em 0 .7em 13em;  }
+ #main .meta .stats dl dd,  #main .meta .stats dl dt	{ margin: 0 0.5em 0; width:auto; float:left}
+ .meta dd ul li 			{ display: inline; margin: auto;}
+ .meta dd blockquote		{ margin: -1em 0 0 0 !important;}
+
 
  /* BLURB*/
  /* the blurb class is used on index pages where we create individual blurbs for each item */
